--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   geolocator: ^9.0.2
   cupertino_icons: ^0.1.2
+  http: ^0.13.5
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
